# bot_halper_lesson_english

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3d87965b572e_create_table.py  49b95a9af1e9_delete_column_user_username.py  7d23af7daca2_create_table.py  9fe7d221a61a_update_column_user_username.py  f38a696cb3ce_initial_table_users.py
app/: __main__.py  fastapi.py  main.py  settings.py
app/core/: db_helper.py  session.py
app/core/models/: __init__.py  lesson.py  user.py
app/core/repo/: requests.py
app/core/repo/query/: __init__.py  users_query.py
app/tgbot/: bot.py  config.py
app/tgbot/api/: router.py  service.py  utils.py
app/tgbot/api/routers/: lesson_router.py  user_router.py
app/tgbot/api/schemas/: lesson_schemas.py
app/tgbot/api/service/: lesson_service.py  user_service.py
app/tgbot/dialogs/lessons/: lessons_dialog.py  states.py
app/tgbot/dialogs/users/: getters.py  handlers.py  keyboard.py  states.py  users_dialog.py  utils.py
app/tgbot/middlewares/: db_session.py
app/tgbot/static/css/: style.css
app/tgbot/templates/: base.html  create_lesson.html  edit_lesson.html  home.html  navbar.html  newsletter.html  profile.html  users.html
nginx/: nginx.conf
