[tool.poetry]
name = "bot-halper-lesson-english"
version = "0.1.0"
description = ""
authors = ["Koresh06 <korets-24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
aiogram-dialog = "^2.1.0"
environs = "^11.0.0"
black = "^24.8.0"
pyyaml = "^6.0.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
